--- a/src/icons/Iconography.stories.mdx
+++ b/src/icons/Iconography.stories.mdx
@@ -41,8 +41,26 @@ import StatisticIcon from './StatisticIcon';
 import TicketIcon from './TicketIcon';
 import UbicationIcon from './UbicationIcon';
 import UnitSalesBoxIcon from './UnitSalesBoxIcon';
+// icons v2
+import {ArrowIcon} from '../icons-v2/ArrowIcon';
+import {BulletPointIcon} from '../icons-v2/BulletPointIcon';
+import {CheckIcon as CheckIconv2} from '../icons-v2/CheckIcon';
+import {CloseIcon} from '../icons-v2/CloseIcon';
+import {IdentificationIcon} from '../icons-v2/IdentificationIcon';
+import {MinusIcon} from '../icons-v2/MinusIcon';
+import {PictureIcon} from '../icons-v2/PictureIcon';
+import {PlusIcon} from '../icons-v2/PlusIcon';
+import {TrashIcon} from '../icons-v2/TrashIcon';
+// 
 import {IdiLogo} from './IdiLogo';
 import {IdiBell} from './IdiBell';
+import {IdiMenu} from './IdiMenu';
+import {IdiActivity} from './IdiActivity';
+import {IdiKeyboardBackSpace} from './IdiKeyboardBackSpace';
+import {IdiArrowLeft} from './IdiArrowLeft';
+import {IdiArrowRight} from './IdiArrowRight';
+import {IdiArrowTop} from './IdiArrowTop';
+import {IdiArrowBottom} from './IdiArrowBottom';
 
 <Meta title="Icons/Gallery" />
 
@@ -54,6 +72,35 @@ import {IdiBell} from './IdiBell';
   <IconItem name="IdiLogo">
     <IdiLogo />
   </IconItem>
+  <IconItem name="IdiBell">
+    <IdiBell />
+  </IconItem>
+  <IconItem name="IdiMenu">
+    <IdiMenu />
+  </IconItem>
+  <IconItem name="IdiActivity">
+    <IdiActivity />
+  </IconItem>
+  <IconItem name="IdiKeyboardBackSpace">
+    <IdiKeyboardBackSpace />
+  </IconItem>
+  <IconItem name="IdiArrowLeft">
+    <IdiArrowLeft />
+  </IconItem>
+  <IconItem name="IdiArrowRight">
+    <IdiArrowRight />
+  </IconItem>
+  <IconItem name="IdiArrowTop">
+    <IdiArrowTop />
+  </IconItem>
+  <IconItem name="IdiArrowBottom">
+    <IdiArrowBottom />
+  </IconItem>
+</IconGallery>
+
+# Icons for refactor
+
+<IconGallery>
   <IconItem name="IdiArrowBackIcon">
     <ArrowBackIcon />
   </IconItem>
@@ -177,7 +224,32 @@ import {IdiBell} from './IdiBell';
   <IconItem name="IdiUnitSalesBoxIcon">
     <UnitSalesBoxIcon />
   </IconItem>
-  <IconItem name="IdiBell ">
-    <IdiBell />
+
+  <IconItem name="IdiArrowIcon">
+    <ArrowIcon />
+  </IconItem>
+  <IconItem name="IdiBulletPointIcon">
+    <BulletPointIcon />
+  </IconItem>
+  <IconItem name="IdiCheckIconv2">
+    <CheckIconv2 />
+  </IconItem>
+  <IconItem name="IdiCloseIcon">
+    <CloseIcon />
+  </IconItem>
+  <IconItem name="IdiIdentificationIcon">
+    <IdentificationIcon />
+  </IconItem>
+  <IconItem name="IdiMinusIcon">
+    <MinusIcon />
+  </IconItem>
+  <IconItem name="IdiPictureIcon">
+    <PictureIcon />
+  </IconItem>
+  <IconItem name="IdiPlusIcon">
+    <PlusIcon />
+  </IconItem>
+  <IconItem name="IdiTrashIcon">
+    <TrashIcon />
   </IconItem>
 </IconGallery>
