--- a/src/icons/Iconography.stories.mdx
+++ b/src/icons/Iconography.stories.mdx
@@ -8,8 +8,8 @@ import CloseEye from './CloseEye';
 import CookingIcon from './CookingIcon';
 import DefaultProfileIcon from './DefaultProfileIcon';
 import DownArrowIcon from './DownArrowIcon';
-import {IconPER} from './flags/IconPER';
-import {IconUSA} from './flags/IconUSA';
+import {IconPER} from './Flags/IconPER';
+import {IconUSA} from './Flags/IconUSA';
 import PER from './Flags/PER';
 import USA from './Flags/USA';
 import GoogleIcon from './GoogleIcon';
