feat: create IdiShopTable

--- a/src/icons/Iconography.stories.mdx
+++ b/src/icons/Iconography.stories.mdx
@@ -61,6 +61,7 @@ import {IdiArrowLeft} from './IdiArrowLeft';
 import {IdiArrowRight} from './IdiArrowRight';
 import {IdiArrowTop} from './IdiArrowTop';
 import {IdiArrowBottom} from './IdiArrowBottom';
+import {IdiShopTable} from './IdiShopTable';
 
 <Meta title="Icons/Gallery" />
 
@@ -95,6 +96,12 @@ import {IdiArrowBottom} from './IdiArrowBottom';
   </IconItem>
   <IconItem name="IdiArrowBottom">
     <IdiArrowBottom />
+  </IconItem>
+  <IconItem name="IdiShopTable">
+    <IdiShopTable />
+  </IconItem>
+  <IconItem name="IdiShopTable">
+    <IdiShopTable color="" colorStroke="#242954" />
   </IconItem>
 </IconGallery>
 
