--- a/src/components/headers/OrderTypeHeader/docs/OrderTypeHeader.stories.mdx
+++ b/src/components/headers/OrderTypeHeader/docs/OrderTypeHeader.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Canvas} from '@storybook/addon-docs'
 import { Template } from "./Template";
 
-<Meta title="headers/OrderTypeHeader" component={Template} />
+<Meta title="headers/OrderTypeHeader" />
 
 <Story
   name="base"
