--- a/src/components/tables/ShopTableList/docs/OrderTypeHeader.stories.mdx
+++ b/src/components/tables/ShopTableList/docs/OrderTypeHeader.stories.mdx
@@ -1,7 +1,7 @@
 import { Meta, Story, Canvas} from '@storybook/addon-docs'
 import { Template } from "./Template";
 
-<Meta title="tables/ShopTableList" component={Template} />
+<Meta title="tables/ShopTableList" />
 
 <Story
   name="base"
