feat: update IdiLogo

--- a/src/icons/Iconography.stories.mdx
+++ b/src/icons/Iconography.stories.mdx
@@ -1,6 +1,7 @@
 import { Meta, Title, IconGallery, IconItem } from '@storybook/addon-docs/';
 
 import {IdiLogo} from './IdiLogo';
+import {IdiLogoV2} from './IdiLogoV2';
 import {IdiBell} from './IdiBell';
 import {IdiMenu} from './IdiMenu';
 import {IdiActivity} from './IdiActivity';
@@ -58,6 +59,9 @@ import {IdiMinus} from './IdiMinus';
 <IconGallery>
   <IconItem name="IdiLogo">
     <IdiLogo />
+  </IconItem>
+  <IconItem name="IdiLogoV2">
+    <IdiLogoV2 />
   </IconItem>
   <IconItem name="IdiBell">
     <IdiBell />
