feat: adjust ButtonsSwitch, fix wrapper of icons and create BaseTextArea

--- a/src/icons/Iconography.stories.mdx
+++ b/src/icons/Iconography.stories.mdx
@@ -12,6 +12,7 @@ import {IdiArrowTop} from './IdiArrowTop';
 import {IdiArrowBottom} from './IdiArrowBottom';
 import {IdiShopTable} from './IdiShopTable';
 import {IdiShopTableV2} from './IdiShopTableV2';
+import {IdiShopTableV3} from './IdiShopTableV3';
 import {IdiArrowBack} from './IdiArrowBack';
 import {IdiCheckbox} from './IdiCheckbox';
 import {IdiCheckboxChecked} from './IdiCheckboxChecked';
@@ -51,6 +52,8 @@ import {IdiPoint} from './IdiPoint';
 import {IdiCheckV2} from './IdiCheckV2';
 import {IdiIdentification} from './IdiIdentification';
 import {IdiMinus} from './IdiMinus';
+import {IdiPickup} from './IdiPickup';
+import {IdiUser} from './IdiUser';
 
 <Meta title="Icons/Gallery" />
 
@@ -93,6 +96,9 @@ import {IdiMinus} from './IdiMinus';
   <IconItem name="IdiShopTableV2">
     <IdiShopTableV2 />
   </IconItem>
+    <IconItem name="IdiShopTableV3">
+    <IdiShopTableV3 />
+  </IconItem>
   <IconItem name="IdiArrowBack">
     <IdiArrowBack />
   </IconItem>
@@ -117,6 +123,12 @@ import {IdiMinus} from './IdiMinus';
   <IconItem name="IdiProfileV2">
     <IdiProfileV2 />
   </IconItem>
+  <IconItem name="IdiPickup">
+    <IdiPickup />
+  </IconItem>
+  <IconItem name="IdiUser">
+    <IdiUser />
+  </IconItem>  
   <IconItem name="IdiArrowDown">
     <IdiArrowDown />
   </IconItem>
