fix: create icon IdiTrashV2

--- a/src/icons/Iconography.stories.mdx
+++ b/src/icons/Iconography.stories.mdx
@@ -33,6 +33,7 @@ import {IdiPreparing} from './IdiPreparing';
 import {IdiArrowRightV2} from './IdiArrowRightV2';
 import {IdiSearch} from './IdiSearch';
 import {IdiTrash} from './IdiTrash';
+import {IdiTrashV2} from './IdiTrashV2';
 import {IdiTruck} from './IdiTruck';
 import {IdiWarning} from './IdiWarning';
 import {IdiImage} from './IdiImage';
@@ -164,6 +165,9 @@ import {IdiUser} from './IdiUser';
   </IconItem>
   <IconItem name="IdiTrash">
     <IdiTrash />
+  </IconItem>
+  <IconItem name="IdiTrashV2">
+    <IdiTrashV2 />
   </IconItem>
   <IconItem name="IdiTruck">
     <IdiTruck />
